<<<<<<< HEAD
[gd_scene load_steps=19 format=3 uid="uid://gfolebh4cxem"]
=======
[gd_scene load_steps=51 format=3 uid="uid://b6ok00b7frkl0"]
>>>>>>> f7edcb080359eaaea0c9fb24b6df6d257bb539e2

[ext_resource type="Script" uid="uid://cvntjjgqivun2" path="res://Level_5.gd" id="1_qo1t8"]
[ext_resource type="Texture2D" uid="uid://dta0mp6bnohpo" path="res://images/wall.png" id="2_jsfrd"]
[ext_resource type="Texture2D" uid="uid://c7xeejs4w2hqn" path="res://images/background_lvl.png" id="2_s35gs"]
[ext_resource type="Texture2D" uid="uid://b8ty1rxj54wq6" path="res://images/tileSet_grass.png" id="3_s35gs"]
[ext_resource type="Texture2D" uid="uid://m6xsqvjlna0o" path="res://images/asset_tiles.jpg" id="4_e5p7a"]
[ext_resource type="Texture2D" uid="uid://btiywhc7nw2oy" path="res://images/cailloux.png" id="5_b1itt"]
[ext_resource type="Script" uid="uid://cg83u7ja2w8hh" path="res://character_body_2d.gd" id="6_frlso"]
<<<<<<< HEAD
[ext_resource type="Texture2D" uid="uid://e1u2dxe4dilo" path="res://images/Main_caractere.png" id="7_3rdnx"]
[ext_resource type="Texture2D" uid="uid://c6rire8iaak3v" path="res://images/return.png" id="9_e5p7a"]
[ext_resource type="Texture2D" uid="uid://liotstg06sah" path="res://images/back_select.png" id="10_b1itt"]
[ext_resource type="Texture2D" uid="uid://byws1smqpjk65" path="res://images/info.png" id="11_frlso"]
[ext_resource type="Texture2D" uid="uid://be2yxbrpj71dn" path="res://images/info_select.png" id="12_3rdnx"]
=======
[ext_resource type="Texture2D" uid="uid://bfqwfr5s7moqt" path="res://images/spritesheet_attack_2.png" id="7_0wac2"]
[ext_resource type="Texture2D" uid="uid://dk4mfw3fnehvd" path="res://images/spritesheet_front.png" id="7_3rdnx"]
[ext_resource type="Texture2D" uid="uid://c1pxsbsusdg8w" path="res://images/spritesheet_idle_lvl5.png" id="7_s35gs"]
[ext_resource type="Texture2D" uid="uid://c6rire8iaak3v" path="res://images/return.png" id="8_s35gs"]
[ext_resource type="Texture2D" uid="uid://c3rwg5rk6vp8p" path="res://images/spritesheet_left.png" id="9_0wac2"]
[ext_resource type="Texture2D" uid="uid://liotstg06sah" path="res://images/back_select.png" id="9_e5p7a"]
[ext_resource type="Texture2D" uid="uid://c2kvoxs1e8sb8" path="res://images/spritesheet_right.png" id="10_g2xk2"]
[ext_resource type="Texture2D" uid="uid://cp15qgd11ll57" path="res://images/spritesheet_up_lvl5.png" id="11_o58um"]
>>>>>>> f7edcb080359eaaea0c9fb24b6df6d257bb539e2

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_g2xk2"]
texture = ExtResource("2_jsfrd")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_o58um"]
texture = ExtResource("3_s35gs")
texture_region_size = Vector2i(64, 64)
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_4km4r"]
texture = ExtResource("4_e5p7a")
separation = Vector2i(28, 0)
texture_region_size = Vector2i(69, 68)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_utj8m"]
texture = ExtResource("5_b1itt")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)

[sub_resource type="TileSet" id="TileSet_48mk8"]
tile_size = Vector2i(64, 64)
physics_layer_0/collision_layer = 1
sources/2 = SubResource("TileSetAtlasSource_o58um")
sources/3 = SubResource("TileSetAtlasSource_4km4r")
sources/6 = SubResource("TileSetAtlasSource_utj8m")
sources/0 = SubResource("TileSetAtlasSource_g2xk2")

[sub_resource type="AtlasTexture" id="AtlasTexture_g2xk2"]
atlas = ExtResource("7_0wac2")
region = Rect2(0, 0, 200, 230)

[sub_resource type="AtlasTexture" id="AtlasTexture_o58um"]
atlas = ExtResource("7_0wac2")
region = Rect2(231, 0, 200, 230)

[sub_resource type="AtlasTexture" id="AtlasTexture_wauj3"]
atlas = ExtResource("7_0wac2")
region = Rect2(462, 0, 200, 230)

[sub_resource type="AtlasTexture" id="AtlasTexture_qk6dx"]
atlas = ExtResource("7_0wac2")
region = Rect2(693, 0, 200, 230)

[sub_resource type="AtlasTexture" id="AtlasTexture_gqguy"]
atlas = ExtResource("7_0wac2")
region = Rect2(924, 0, 200, 230)

[sub_resource type="AtlasTexture" id="AtlasTexture_ey5nn"]
atlas = ExtResource("7_0wac2")
region = Rect2(1155, 0, 200, 230)

[sub_resource type="AtlasTexture" id="AtlasTexture_vts6n"]
atlas = ExtResource("7_0wac2")
region = Rect2(1386, 0, 200, 230)

[sub_resource type="AtlasTexture" id="AtlasTexture_jcjid"]
atlas = ExtResource("7_0wac2")
region = Rect2(1617, 0, 200, 230)

[sub_resource type="AtlasTexture" id="AtlasTexture_yc0pk"]
atlas = ExtResource("7_0wac2")
region = Rect2(1848, 0, 200, 230)

[sub_resource type="AtlasTexture" id="AtlasTexture_qgthi"]
atlas = ExtResource("7_0wac2")
region = Rect2(2079, 0, 200, 230)

[sub_resource type="AtlasTexture" id="AtlasTexture_4fktf"]
atlas = ExtResource("7_0wac2")
region = Rect2(2310, 0, 200, 230)

[sub_resource type="AtlasTexture" id="AtlasTexture_2p63o"]
atlas = ExtResource("7_0wac2")
region = Rect2(2541, 0, 200, 230)

[sub_resource type="AtlasTexture" id="AtlasTexture_r1hvx"]
atlas = ExtResource("7_0wac2")
region = Rect2(2772, 0, 200, 230)

[sub_resource type="AtlasTexture" id="AtlasTexture_5y5yx"]
atlas = ExtResource("7_0wac2")
region = Rect2(3003, 0, 200, 230)

[sub_resource type="AtlasTexture" id="AtlasTexture_bo2dt"]
atlas = ExtResource("7_0wac2")
region = Rect2(3234, 0, 200, 230)

[sub_resource type="AtlasTexture" id="AtlasTexture_4km4r"]
atlas = ExtResource("7_3rdnx")
region = Rect2(0, 0, 190, 232)

[sub_resource type="AtlasTexture" id="AtlasTexture_utj8m"]
atlas = ExtResource("7_3rdnx")
region = Rect2(225, 0, 190, 232)

[sub_resource type="AtlasTexture" id="AtlasTexture_e5p7a"]
atlas = ExtResource("7_s35gs")
region = Rect2(0, 0, 190, 232)

[sub_resource type="AtlasTexture" id="AtlasTexture_b1itt"]
atlas = ExtResource("7_s35gs")
region = Rect2(225, 0, 190, 232)

[sub_resource type="AtlasTexture" id="AtlasTexture_48mk8"]
atlas = ExtResource("9_0wac2")
region = Rect2(0, 0, 190, 232)

[sub_resource type="AtlasTexture" id="AtlasTexture_bti2b"]
atlas = ExtResource("9_0wac2")
region = Rect2(223, 0, 190, 232)

[sub_resource type="AtlasTexture" id="AtlasTexture_p8vu3"]
atlas = ExtResource("9_0wac2")
region = Rect2(446, 0, 190, 232)

[sub_resource type="AtlasTexture" id="AtlasTexture_i8xq7"]
atlas = ExtResource("9_0wac2")
region = Rect2(669, 0, 190, 232)

[sub_resource type="AtlasTexture" id="AtlasTexture_e3dyy"]
atlas = ExtResource("10_g2xk2")
region = Rect2(0, 0, 190, 232)

[sub_resource type="AtlasTexture" id="AtlasTexture_6oowx"]
atlas = ExtResource("10_g2xk2")
region = Rect2(223, 0, 190, 232)

[sub_resource type="AtlasTexture" id="AtlasTexture_6rntn"]
atlas = ExtResource("10_g2xk2")
region = Rect2(446, 0, 190, 232)

[sub_resource type="AtlasTexture" id="AtlasTexture_nchoy"]
atlas = ExtResource("10_g2xk2")
region = Rect2(669, 0, 190, 232)

[sub_resource type="AtlasTexture" id="AtlasTexture_ttunx"]
atlas = ExtResource("11_o58um")
region = Rect2(0, 0, 180, 230)

[sub_resource type="AtlasTexture" id="AtlasTexture_4xosx"]
atlas = ExtResource("11_o58um")
region = Rect2(215, 0, 180, 230)

[sub_resource type="SpriteFrames" id="SpriteFrames_frlso"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g2xk2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o58um")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wauj3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qk6dx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gqguy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ey5nn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vts6n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jcjid")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yc0pk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qgthi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4fktf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2p63o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r1hvx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5y5yx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bo2dt")
}],
"loop": true,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4km4r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_utj8m")
}],
"loop": true,
"name": &"down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e5p7a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b1itt")
}],
"loop": true,
"name": &"idle",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_48mk8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bti2b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p8vu3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i8xq7")
}],
"loop": true,
"name": &"left",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e3dyy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6oowx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6rntn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nchoy")
}],
"loop": true,
"name": &"right",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ttunx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4xosx")
}],
"loop": true,
"name": &"up",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bti2b"]
size = Vector2(46, 60)

[node name="Level5" type="Node2D"]
script = ExtResource("1_qo1t8")

[node name="TextureRect2" type="TextureRect" parent="."]
offset_left = -38.0
offset_top = -35.0
offset_right = 1242.0
offset_bottom = 685.0
texture = ExtResource("2_s35gs")

[node name="monter" type="Button" parent="."]
offset_left = 668.0
offset_top = 161.0
offset_right = 761.0
offset_bottom = 197.0
theme_override_font_sizes/font_size = 20
text = "move_up()"
metadata/_edit_use_anchors_ = true

[node name="gauche" type="Button" parent="."]
offset_left = 668.0
offset_top = 278.0
offset_right = 761.0
offset_bottom = 314.0
theme_override_font_sizes/font_size = 20
text = "move_left()"
metadata/_edit_use_anchors_ = true

[node name="descendre" type="Button" parent="."]
offset_left = 668.0
offset_top = 219.0
offset_right = 761.0
offset_bottom = 255.0
theme_override_font_sizes/font_size = 20
text = "move_down()"
metadata/_edit_use_anchors_ = true

[node name="droite" type="Button" parent="."]
offset_left = 668.0
offset_top = 333.0
offset_right = 761.0
offset_bottom = 369.0
theme_override_font_sizes/font_size = 20
text = "move_right()"
metadata/_edit_use_anchors_ = true

[node name="Start" type="Button" parent="."]
offset_left = 845.0
offset_top = 521.0
offset_right = 938.0
offset_bottom = 557.0
theme_override_font_sizes/font_size = 20
text = "Start()"
metadata/_edit_use_anchors_ = true

[node name="Reset" type="Button" parent="."]
offset_left = 530.0
offset_top = 521.0
offset_right = 623.0
offset_bottom = 557.0
theme_override_font_sizes/font_size = 20
text = "Reset()"
metadata/_edit_use_anchors_ = true

[node name="btn_while" type="Button" parent="."]
offset_left = 668.0
offset_top = 386.0
offset_right = 812.0
offset_bottom = 422.0
theme_override_font_sizes/font_size = 20
text = "while no_wall()"
metadata/_edit_use_anchors_ = true

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = 857.0
offset_top = 145.0
offset_right = 1084.0
offset_bottom = 479.0
metadata/_edit_use_anchors_ = true

[node name="ItemList" type="ItemList" parent="TextureRect"]
layout_mode = 0
offset_right = 225.0
offset_bottom = 335.0
metadata/_edit_use_anchors_ = true

[node name="Clear" type="Button" parent="."]
offset_left = 986.0
offset_top = 521.0
offset_right = 1079.0
offset_bottom = 557.0
theme_override_font_sizes/font_size = 20
text = "Clear()"
metadata/_edit_use_anchors_ = true

[node name="TileMap" type="TileMap" parent="."]
position = Vector2(0, 150)
tile_set = SubResource("TileSet_48mk8")
format = 2
layer_0/tile_data = PackedInt32Array(131072, 6, 0, 131073, 0, 0, 131074, 0, 0, 131076, 0, 0, 131077, 6, 0, 65541, 6, 0, 0, 6, 0, 65536, 6, 0, 65537, 6, 0, 65538, 6, 0, 2, 6, 0, 1, 6, 0, 3, 6, 0, 4, 6, 0, 65540, 6, 0, 5, 6, 0, 196608, 0, 0, 262144, 6, 0, 262145, 6, 0, 196609, 6, 0, 196610, 6, 0, 262147, 6, 0, 262148, 6, 0, 196612, 6, 0, 196613, 6, 0, 262149, 6, 0, 6, 6, 0, 65542, 6, 0, 262150, 6, 0, 131078, 6, 0, 196614, 6, 0, 327680, 6, 0, 327681, 6, 0, 327682, 6, 0, 327683, 6, 0, 327684, 6, 0, 327685, 6, 0, 327686, 6, 0, -65536, 6, 0, -65535, 6, 0, -65534, 6, 0, -65533, 6, 0, -65532, 6, 0, -65531, 0, 0, -65530, 6, 0, 393216, 0, 0, 393217, 0, 0, 393218, 0, 0, 393219, 0, 0, 393220, 0, 0, 393221, 0, 0, 393222, 0, 0, 393223, 0, 0, 327687, 0, 0, 262151, 0, 0, 196615, 0, 0, 131079, 0, 0, 65543, 0, 0, 7, 0, 0, -65529, 0, 0, -131065, 0, 0, -131066, 0, 0, -131067, 0, 0, -131068, 0, 0, -131069, 0, 0, -131070, 0, 0, -131071, 0, 0, -131072, 0, 0, -65537, 0, 0, -1, 0, 0, 65535, 0, 0, 131071, 0, 0, 196607, 0, 0, 262143, 0, 0, 327679, 0, 0, 393215, 0, 0, 458751, 0, 0, 131075, 0, 0, 196611, 6, 0, 262146, 6, 0, 65539, 6, 0)

[node name="CharacterBody2D" type="CharacterBody2D" parent="."]
script = ExtResource("6_frlso")

[node name="Sprite2D" type="AnimatedSprite2D" parent="CharacterBody2D"]
position = Vector2(-0.9999924, 3.0000076)
scale = Vector2(0.23235224, 0.25228238)
sprite_frames = SubResource("SpriteFrames_frlso")
animation = &"idle"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D"]
position = Vector2(-1, 3)
shape = SubResource("RectangleShape2D_bti2b")

[node name="up" type="RayCast2D" parent="CharacterBody2D"]
position = Vector2(0, -50)
target_position = Vector2(0, -50)
hit_from_inside = true

[node name="down" type="RayCast2D" parent="CharacterBody2D"]
position = Vector2(0, 50)
hit_from_inside = true

[node name="left" type="RayCast2D" parent="CharacterBody2D"]
position = Vector2(-50, 0)
target_position = Vector2(-50, 0)
hit_from_inside = true

[node name="right" type="RayCast2D" parent="CharacterBody2D"]
position = Vector2(50, 0)
target_position = Vector2(50, 0)
hit_from_inside = true

[node name="back" type="TextureButton" parent="."]
<<<<<<< HEAD
offset_left = 530.0
offset_top = 22.0
offset_right = 600.0
offset_bottom = 94.0
texture_normal = ExtResource("9_e5p7a")
texture_hover = ExtResource("10_b1itt")
=======
offset_left = 1046.0
offset_top = 19.0
offset_right = 1116.0
offset_bottom = 91.0
texture_normal = ExtResource("8_s35gs")
texture_hover = ExtResource("9_e5p7a")
>>>>>>> f7edcb080359eaaea0c9fb24b6df6d257bb539e2
ignore_texture_size = true
stretch_mode = 0
metadata/_edit_use_anchors_ = true

<<<<<<< HEAD
[node name="info_button" type="TextureButton" parent="."]
offset_left = 1066.0
offset_top = 22.0
offset_right = 1123.0
offset_bottom = 75.0
texture_normal = ExtResource("11_frlso")
texture_hover = ExtResource("12_3rdnx")
ignore_texture_size = true
stretch_mode = 5

[node name="Label" type="Label" parent="."]
offset_left = 902.0
offset_top = 31.0
offset_right = 1058.0
offset_bottom = 68.0
theme_override_font_sizes/font_size = 22
text = "INFORMATION"
=======
[node name="attack" type="Button" parent="."]
offset_left = 671.0
offset_top = 449.0
offset_right = 764.0
offset_bottom = 485.0
theme_override_font_sizes/font_size = 20
text = "attack()"
metadata/_edit_use_anchors_ = true
>>>>>>> f7edcb080359eaaea0c9fb24b6df6d257bb539e2

[connection signal="pressed" from="monter" to="." method="_on_btn_up_pressed"]
[connection signal="pressed" from="gauche" to="." method="_on_btn_left_pressed"]
[connection signal="pressed" from="descendre" to="." method="_on_btn_down_pressed"]
[connection signal="pressed" from="droite" to="." method="_on_btn_right_pressed"]
[connection signal="pressed" from="Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Reset" to="." method="_on_reset_pressed"]
[connection signal="pressed" from="btn_while" to="." method="_on_btn_while_pressed"]
[connection signal="pressed" from="Clear" to="." method="clear_script"]
[connection signal="pressed" from="back" to="." method="_on_back_pressed"]
<<<<<<< HEAD
[connection signal="pressed" from="info_button" to="." method="_on_info_button_pressed"]
=======
[connection signal="pressed" from="attack" to="." method="_on_btn_attack_pressed"]
>>>>>>> f7edcb080359eaaea0c9fb24b6df6d257bb539e2
